# siderea

./: .gitignore  .prettierignore  Cargo.toml  TEXTURE-CREDITS.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
crates/astro-core/: Cargo.toml
crates/astro-core/src/: lib.rs
crates/astro-core/src/coordinates/: frames.rs  mod.rs  precession_nutation.rs  rotations.rs  transform.rs
crates/astro-core/src/core/: anomaly.rs  constants.rs  elements.rs  error.rs  fast_math.rs  integrators_static.rs  linalg.rs  mod.rs  numerical.rs  state.rs  time.rs
crates/astro-core/src/ephemeris/: lunar.rs  mod.rs  vsop87.rs
crates/astro-core/src/geodesics/: deflection.rs  lightpath.rs  mod.rs  photon_sphere.rs  schwarzschild.rs
crates/astro-core/src/maneuvers/: bielliptic.rs  budget.rs  gravityassist.rs  hohmann.rs  lambert.rs  planechange.rs  rendezvous.rs
crates/astro-core/src/propagators/: keplerian.rs  mod.rs  perturbations.rs  perturbations_static.rs  stm.rs
crates/astro-core/src/satellite/: mod.rs  omm.rs  sgp4_wrapper.rs  tle.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: bodies.rs  lib.rs  tests.rs
data/curated/: notable-objects.json  star-descriptions.json  star-extended.json
functions/api/: exoplanets.ts  horizons.ts
scripts/: fetch-textures.mjs  fetch-tle.mjs  generate-constellations.py  process-hyg.py  process-textures.mjs  validate-notable-objects.py
src/lib/data/: api-cache.test.ts  api-cache.ts  api-config.ts  bv-color.test.ts  bv-color.ts  celestrak.test.ts  celestrak.ts  constellations.test.ts  constellations.ts  exoplanets.test.ts  exoplanets.ts  horizons.test.ts  horizons.ts  index.ts  nasa-images.test.ts  nasa-images.ts  notable-objects.test.ts  notable-objects.ts  resilient-fetch.test.ts  resilient-fetch.ts  solar-system.test.ts  solar-system.ts  spectral-utils.test.ts  spectral-utils.ts  star-catalog.test.ts  star-catalog.ts  star-octree.test.ts  star-octree.ts  types.ts  wikipedia.test.ts  wikipedia.ts
src/lib/engine/: approach-detector.test.ts  (+12 more)
src/routes/: +page.svelte
static/data/: clusters.json  constellations.json  solar-system.json  stars-meta.json  tle-snapshot.json
(+131 files in other folders)
