[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
astro-core = { path = "../astro-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
hifitime = "4"
nalgebra = "0.33"

[dev-dependencies]
approx = "0.5"

# Skip wasm-pack's bundled wasm-opt (too old for Rust's default WASM features);
# the build:wasm npm script runs a system wasm-opt with correct flags instead.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
